headshots all added and spacing fixed still needs some work for spacing in the meet the team page and home register form needs to be styled

--- a/public/stylesheets/team.css
+++ b/public/stylesheets/team.css
@@ -32,6 +32,7 @@
     border-radius: 100%;
     /* background: url(../veer.jpg); */
     background-size: 9vw 19vh;
+    border: 2px solid black;
     /* overflow: hidden;
     overflow-x: hidden;
     overflow-y: hidden; */
@@ -45,11 +46,22 @@
 
  .icon_container {
     display: flex;
-
+    justify-content: center;
+    align-items: center;
 }
 
 .team1_title {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
+.team1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.member {
+    margin-left: 100px;
+}
